# uj_Algorytmy_i_Struktury_Danych

./: CMakeLists.txt  README.md
2_Zestaw1/: Makefile  ReadmeC.md  dictionarysimple.h  liczenie  liczenie.cpp  main.cpp  setlinked.h  setsimple.h
2_Zestaw2/: Makefile  liczenie.cpp  main.cpp  openhash.h  setHashed.h  setlinked.h
2_Zestaw3/: liczenie.cpp  priorityQueue.h  priorityQueueBinary.h  test.cpp
2_Zestaw4/: ADTgraph.h  liczenie  liczenie.cpp  test  test.cpp
2_Zestaw4/data/: nb.ipynb
2_Zestaw5/B/: ADTgraph.h  test  test.cpp  testGraphB.txt
2_Zestaw5/C/: NEIGHBORgraph.h  adtgraph_test_output.txt  liczenie  liczenie.cpp  test  test.cpp
2_Zestaw5/D/: graf_D-2.txt  graf_D.txt  main  main.cpp
2_Zestaw5/E/: graf_E.txt  kolory.txt  main.cpp
2_Zestaw6/A/: kon.cpp
2_Zestaw6/B/: graCzteryLitery.cpp
2_Zestaw6/C/: jajko.cpp
Zestaw03/: Makefile  arraylist.h  main.cpp
Zestaw04/: main.cpp  singlelist.h
Zestaw05/: doublelist.h  main.cpp
Zestaw06/: Makefile  main.cpp  mydeque.cpp  mydeque.h
Zestaw07/: Makefile  README.md  main.cpp  mystack.h  rpn.cpp
Zestaw08/: Makefile  README.md  main.cpp  myqueue.h
Zestaw09/: main.cpp  mypriorityqueue.h
Zestaw10/: Makefile  README.md  main.cpp  notrandombinarytree.h
Zestaw11/: Makefile  binarysearchtree.h  main.cpp
