cmake_minimum_required(VERSION 3.29)
project(uj_Algorytmy_i_Struktury_Danych)

set(CMAKE_CXX_STANDARD 20)

add_executable(uj_Algorytmy_i_Struktury_Danych
        Zestaw04/main.cpp
        Zestaw04/singlelist.h
        Zestaw05/doublelist.h
        Zestaw05/main.cpp
        Zestaw06/mydeque.h
        Zestaw06/main.cpp
        Zestaw07/mystack.h
        Zestaw07/main.cpp
        Zestaw07/rpn.cpp
        Zestaw08/myqueue.h
        Zestaw08/main.cpp
        Zestaw09/mypriorityqueue.h
        Zestaw09/main.cpp
        Zestaw10/main.cpp
        Zestaw10/notrandombinarytree.h
        Zestaw11/binarysearchtree.h
        Zestaw11/main.cpp
        2_Zestaw2/openhash.h
        2_Zestaw2/setlinked.h
        2_Zestaw2/setsimple.h
        2_Zestaw2/setHashed.h
        2_Zestaw1/dictionarysimple.h
        2_Zestaw1/liczenie.cpp
        2_Zestaw1/main.cpp
        2_Zestaw1/setlinked.h
        2_Zestaw1/setsimple.h
        2_Zestaw2/main.cpp
        2_Zestaw2/liczenie.cpp
        2_Zestaw3/priorityQueue.h
        2_Zestaw3/priorityQueueBinary.h
        2_Zestaw3/test.cpp
        2_Zestaw3/liczenie.cpp)
